--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==2.2.16
 djangorestframework==3.12.4
-django-filter==22.1
+django-extra-fields==3.0.2
+django-filter==2.4.0
 pytz==2022.6
 sqlparse==0.4.3
 djoser==2.1.0
