--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ djangorestframework==3.12.4
 django-extra-fields==3.0.2
 django-filter==2.4.0
 djoser==2.1.0
+gunicorn==20.0.4
 isort==5.10.1
 pytz==2022.6
 Pillow==9.3.0
