--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,12 +1,31 @@
-version: '3.3'
+version: '3.8'
 services:
 
+  db:
+    image: postgres:13.0-alpine
+    volumes:
+      - postgres_value:/var/lib/postgresql/data/
+    env_file:
+      - ./.env
+
+  backend:
+    image: timoha21/backend:latest
+    restart: always
+    volumes:
+      - static_value:/backend/static/
+      - media_value:/backend/media/
+    depends_on:
+      - db
+    env_file:
+      - ./.env
+
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: timoha21/frontend:latest
     volumes:
       - ../frontend/:/app/result_build/
+    depends_on:
+      - backend
+  
   nginx:
     image: nginx:1.19.3
     ports:
@@ -15,3 +34,12 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/static/
+      - media_value:/media/
+    depends_on:
+      - frontend
+
+volumes:
+  postgres_value:
+  static_value:
+  media_value:
