--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,28 @@
 server {
     listen 80;
+    server_name localhost, 127.0.0.1;
+
+    location /media/ {
+        autoindex on;
+        alias /media/;
+    }
+
+    location /static/admin/ {
+        autoindex on;
+        alias /static/admin/;
+    }
+
+    location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://backend:8000;
+    }
+
+    location /admin/ {
+        proxy_pass http://backend:8000/admin/;
+    }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
