--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         tags: ${{ secrets.DOCKER_USERNAME }}/frontend:latest
   
   deploy:
-    runs_on: ubuntu-latest
+    runs-on: ubuntu-latest
     needs: build_and_push_to_docker_hub
     steps:
     - name: executing remote ssh commands to deploy
