--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         script: |
           sudo docker-compose stop
-          sudo docker compose rm backend
+          sudo docker-compose rm backend
           sudo docker-compose rm frontend
           touch .env
           echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
