--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost, 127.0.0.1;
+    server_name localhost, 127.0.0.1, 158.160.17.206;
 
     location /media/ {
         autoindex on;
