--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 Django==2.2.16
 djangorestframework==3.12.4
 django-extra-fields==3.0.2
+django-colorfield==0.8.0
 django-filter==2.4.0
 djoser==2.1.0
 gunicorn==20.0.4
