--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,10 +1,16 @@
 server {
     listen 80;
     server_name localhost, 127.0.0.1, 158.160.17.206;
+    server_tokens off;
+
 
     location /media/ {
         autoindex on;
         alias /media/;
+    }
+
+    location /static/rest_framework/ {
+        root /var/html/;
     }
 
     location /static/admin/ {
@@ -14,6 +20,7 @@ server {
 
     location /api/ {
         proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-Host $host;
         proxy_set_header        X-Forwarded-Server $host;
         proxy_pass http://backend:8000;
