--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,16 +1,10 @@
 server {
     listen 80;
-    server_name localhost, 127.0.0.1, 158.160.17.206;
-    server_tokens off;
-
+    server_name 158.160.1.14;
 
     location /media/ {
         autoindex on;
         alias /media/;
-    }
-
-    location /static/rest_framework/ {
-        root /var/html/;
     }
 
     location /static/admin/ {
