--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 158.160.1.14;
+    server_name 158.160.1.14, localhost;
 
     location /media/ {
         autoindex on;
