--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,6 +42,8 @@ jobs:
         passphrase: ${{ secrets.PASSPHRASE }}
         key: ${{ secrets.SSH_KEY }}
         script: |
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/frontend:latest
+          sudo docker pull ${{ secrets.DOCKER_USERNAME }}/backend:latest
           sudo docker-compose stop
           sudo docker-compose rm backend
           sudo docker-compose rm frontend
@@ -52,4 +54,4 @@ jobs:
           echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
           echo DB_HOST=${{ secrets.DB_HOST }} >> .env
           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-          sudo docker-compose up -d --build
+          sudo docker-compose up -d
