--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,33 +1,38 @@
 server {
-    listen 80;
     server_name 158.160.1.14, localhost;
 
     location /media/ {
-        autoindex on;
-        alias /media/;
+        root /var/html/;
     }
 
     location /static/admin/ {
-        autoindex on;
-        alias /static/admin/;
+	      root /var/html/;
     }
 
-    location /api/ {
-        proxy_set_header        Host $host;
-        proxy_set_header        X-Real-IP $remote_addr;
-        proxy_set_header        X-Forwarded-Host $host;
-        proxy_set_header        X-Forwarded-Server $host;
-        proxy_pass http://backend:8000;
+    location /static/colorfield/ {
+        root /var/html;
     }
 
-    location /admin/ {
-        proxy_pass http://backend:8000/admin/;
+    location /static/rest_framework {
+        root /var/html/static/rest_framework;
     }
 
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
+    location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://backend:8000;
+    }
+    location /admin/ {
+        proxy_set_header        Host $host;
+        proxy_pass http://backend:8000/admin/;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -36,10 +41,10 @@ server {
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
-      }
-      error_page   500 502 503 504  /50x.html;
-      location = /50x.html {
-        root   /var/html/frontend/;
-      }
+    }
 
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /var/html/frontend/;
+    }
 }
