--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,7 @@
 server {
     server_name 158.160.1.14, localhost;
+    server_tokens off;
+
 
     location /media/ {
         root /var/html/;
@@ -7,10 +9,6 @@ server {
 
     location /static/admin/ {
 	      root /var/html/;
-    }
-
-    location /static/colorfield/ {
-        root /var/html;
     }
 
     location /static/rest_framework {
