--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,18 +1,16 @@
 server {
     server_name 158.160.1.14, localhost;
-    server_tokens off;
-
 
     location /media/ {
         root /var/html/;
     }
 
     location /static/admin/ {
-	      root /var/html/;
+	    root /var/html/;
     }
 
-    location /static/rest_framework {
-        root /var/html/static/rest_framework;
+    location /static/rest_framework/ {
+        root /var/html/;
     }
 
     location /api/docs/ {
@@ -23,6 +21,7 @@ server {
     location /api/ {
         proxy_set_header        Host $host;
         proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Server $host;
         proxy_pass http://backend:8000;
     }
