--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -1,5 +1,6 @@
 server {
     server_name 158.160.1.14, localhost;
+    server_tokens off;
 
     location /api/docs/ { 
         root /usr/share/nginx/html; 
